--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,45 @@
 					<wtpContextName>spring-mvc-form</wtpContextName>
 				</configuration>
 			</plugin>
+			<!-- dockerfile spotify plugin added for build and push-->
+			
+        <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <version>1.4.10</version>
+            <executions>
+                <execution>
+                    <id>tag-latest</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>tag</goal>
+                        <goal>push</goal>
+                    </goals>
+                    <configuration>
+                        <tag>latest</tag>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>tag-version</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>tag</goal>
+                        <goal>push</goal>
+                    </goals>
+                    <configuration>
+                        <tag>${project.version}</tag>
+                    </configuration>
+                </execution>
+            </executions>
+            <configuration>
+                <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+                <repository>registry.hub.docker.com/malickguess/${project.artifactId}</repository>
+                <tag>${project.version}</tag>
+                <buildArgs>
+                    <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                </buildArgs>
+            </configuration>
+        </plugin>
 
 		</plugins>
 	</build>
